[package]
name = "fbpconvert"
description = "A command line factorio blueprint converter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.143", features = ["derive"]}
serde_json = {version = "1.0.83", features = ["preserve_order"]}
base64 = "0.13.0"
inflate = "0.4.5"
deflate = "1.0.0"
clap = {version = "4.0.19", features = ["derive"]}
clap_complete = "4.0.3"
crossterm = "0.25.0"
copypasta = "0.8.1"
rayon = "1.6.0"

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
codegen-units = 1
strip = "symbols"
lto = true
incremental = true
