[package]
name = "fbpconvert"
description = "A command line factorio blueprint converter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
serde_json = {version = "1.0.96", features = ["preserve_order"]}
base64 = "0.21.0"
inflate = "0.4.5"
deflate = "1.0.0"
clap = {version = "3.2.25", features = ["derive"]}
clap_complete = "4.1.0"
crossterm = "0.26.1"
copypasta = "0.8.2"
rayon = "1.7.0"

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
lto = true
incremental = true
panic = "abort"
