[package]
name = "fbpconvert"
description = "A command line factorio blueprint converter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fbpconvert"
path = "src/main.rs"

[lib]
name = "fbpcore"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.193", features = ["derive"]}
serde_json = {version = "1.0.108", features = ["preserve_order"]}
base64 = "0.21.5"
inflate = "0.4.5"
deflate = "1.0.0"
clap = {version = "4.4.8", features = ["derive"]}
clap_complete = "4.4.4"
crossterm = "0.27.0"
copypasta = "0.10.0"
rayon = "1.8.0"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = true
panic = "abort"
